# pinocchio-idl-examples

./: .gitignore  README.md
pinocchio-counter/: Cargo.toml  README.md
pinocchio-counter/src/: error.rs  lib.rs  state.rs
pinocchio-counter/src/instructions/: decrement.rs  increment.rs  initialize.rs  mod.rs
pinocchio-counter/tests/: counter_tests.rs
pinocchio-escrow/: Cargo.toml  README.md
pinocchio-escrow/src/: constants.rs  error.rs  lib.rs
pinocchio-escrow/src/instructions/: make.rs  mod.rs  refund.rs  take.rs
pinocchio-escrow/src/state/: escrow.rs
pinocchio-escrow/tests/: escrow_tests.rs
pinocchio-fundraiser/: Cargo.toml  README.md  codama.json  expanded.rs
pinocchio-fundraiser/.agents/: AGENTS.md
pinocchio-fundraiser/src/: constants.rs  lib.rs
pinocchio-fundraiser/src/instructions/: checker.rs  contribute.rs  initialize.rs  mod.rs  refund.rs
pinocchio-fundraiser/src/state/: contributor.rs  fundraiser.rs
pinocchio-fundraiser/src/tests/: mod.rs
