[package]
name = "pinocchio-counter"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
pinocchio                           = { version = "0.11.1", features = ["cpi"] }
pinocchio-system                    = "0.6.1"
pinocchio-pubkey = "0.3.0"

pinocchio-idl-macros                = "0.1.1"

[dev-dependencies]
litesvm                         = "0.12.0"
solana-sdk                      = "3.0.0"
