[package]
name = "pinocchio-escrow"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
pinocchio                           = { version = "0.11.1", features = ["cpi"] }
pinocchio-system                    = "0.6.1"
pinocchio-token                     = "0.6.0"
pinocchio-log                       = "0.5.1"
pinocchio-pubkey = "0.3.0"
pinocchio-associated-token-account  = "0.4.0"
pinocchio-idl-macros                = "0.1.1"

[dev-dependencies]
litesvm                         = "0.12.0"
litesvm-token                   = "0.12.0"
solana-sdk                      = "3.0.0"
spl-token-2022                  = { version = "11.0.0", features = ["no-entrypoint"] }
spl-associated-token-account    = { version = "8.0.0", features = ["no-entrypoint"] }
